# whisp

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
tools/whisp-syntax/: README.md  language-configuration.json  package.json  whisp-syntax-0.0.1.vsix
tools/whisp-syntax/syntaxes/: whisp.tmLanguage.json
whisp/: Cargo.toml
whisp-cli/: Cargo.toml
whisp-cli/src/: commands.rs  main.rs  welcome.rs
whisp-doc/: README.md  draw-grammar  module_relation.puml  module_sequence.puml  whisp.excalidraw
whisp-lexer/: Cargo.toml
whisp-lexer/src/: lexer.rs  token.rs
whisp-parser/: Cargo.toml
whisp-parser/src/: ast.rs  lib.rs  mock.rs  ops.rs  symbol.rs  tree.rs
whisp-parser/src/parser/: control_flow.rs  expressions.rs  functions.rs  ll_parser.rs  mod.rs  statements.rs
whisp-runtime/: Cargo.toml  README.md
whisp-runtime/src/: environment.rs  evaluator.rs  interpreter.rs  lib.rs  object.rs  value.rs  value_type.rs
whisp-runtime/src/runtime/: builtin.rs  evaluator.rs  interpreter.rs  mod.rs
whisp-runtime/tests/: test_environment.rs  test_interpreter.rs  test_value.rs  test_value_type.rs
whisp-runtime/tests/runtime/: test_interpreter.rs
whisp/src/: lib.rs  whisp.rs
whisp/src/importer/: builtinimporter.rs  mod.rs
whisp/src/module/: finder.rs  loader.rs  mod.rs  object.rs  spec.rs
whisp/tests/: bubble_sort.w  test.w
