[workspace]
resolver = "3"
members = [
    "whisp",
    "whisp-lexer",
    "whisp-parser",
    "whisp-runtime",
]

[workspace.package]
repository = "https://github.com/void3000/whisp"
edition = "2024"

[patch.crates-io]
whisp = { path = "whisp" }
whisp-lexer = { path = "whisp-lexer" }
whisp-parser = { path = "whisp-parser" }
whisp-runtime = { path = "whisp-runtime" }
