[workspace]
resolver = "3"
members = [
    "whisp",
    "whisp-lexer",
    "whisp-parser",
    "whisp-runtime",
]

[workspace.package]
repository = "https://github.com/void3000/whisp"
edition = "2024"

[patch.crates-io]
whisp = { path = "whisp" }
whisp_lexer = { path = "whisp-lexer" }
whisp_parser = { path = "whisp-parser" }
whisp_runtime = { path = "whisp-runtime" }
